[package]
name = "mirame"
version = "0.1.0"
edition = "2021"
authors = ["Rohit Prakash <rohitp934@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mirame"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
whoami = "1.4.0"
